assets/less/pages/release-notes.less
.page-release-notes {
  .accordion {
    width: 100%;
    min-width: auto;
    margin-left: auto;
    margin-right: auto;
  }

  .release-text {
    margin-bottom: 2rem;
    li {
      list-style: none;
    }
  }

  .wide {
    width: 60%;
  }

  .header-section {
    margin-top: 6rem;
    margin-bottom: 2rem;

    &:first-child {
      margin-top: 0;
    }
  }

  .note-container {
    display: grid;
    grid-template-columns: 7rem 2fr;
    grid-template-rows: 1fr 1fr;
    align-items: start;
    //margin-bottom: 0.5rem;
  }


  .note-category {
    margin: 0 1rem 0 0;
    grid-row: 1;

    .category-icon {
      width: 1.5rem;
      color: var(--color-blue-70);
    }

    .category-container {
      display: flex;
      //align-items: center;
      gap: 0.5rem;
      text-transform: capitalize;
    }
  }

  .note-text {
    text-align: left;
    font-weight: 500;
    grid-row: 1;

    p {
      margin: 0;
    }
  }

  .note-bug-numbers {
    width: 100%;
    grid-row: 2;
    grid-column: 1 / span 2;

    p {
      display: flex;
      flex-direction: row;
      justify-content: center;
      gap: 1rem;
    }

    // per each bug
    a::after {
      content: ',';
    }

    a:last-child::after {
      content: '';
    }
  }
}

